Test Org - Speridian/src/objects/BA_Asset_Census__c.object
<CustomObject>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relation__c</fullName>
        <label>Relation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_CensusEffectiveDate__c</fullName>
        <label>Census Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_CensusTerminationDate__c</fullName>
        <label>Census Termination Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_MemberDOB__c</fullName>
        <label>Date Of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Asset Census</relationshipLabel>
        <relationshipName>Asset_Census</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Asset Census</label>
    <nameField>
        <displayFormat>ACID-{0000}</displayFormat>
        <label>Asset Census Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Census</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>